Allowing method without parameters to have parentheses

--- a/ruby/.rubocop.yml
+++ b/ruby/.rubocop.yml
@@ -4,5 +4,8 @@ Lint/ScriptPermission:
   Enabled: false
 Style/FrozenStringLiteralComment:
   Enabled: false
+Style/MethodCallWithoutArgsParentheses:
+  Enabled: false
+
 AllCops:
   NewCops: enable
